--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="10dp">
+
+            <Button
+                android:id="@+id/btn_alipay1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="支付宝1"
+                android:gravity="center"/>
+
+            <Button
+                android:id="@+id/btn_alipay2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="支付宝支付2"
+                android:gravity="center"/>
+
+            <Button
+                android:id="@+id/btn_alipay3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="支付宝支付3"
+                android:gravity="center"/>
+
+            <Button
+                android:id="@+id/btn_wxpay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="微信支付"
+                android:gravity="center"/>
+
+            <Button
+                android:id="@+id/btn_unionpay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="银联支付"
+                android:gravity="center"/>
+        </LinearLayout>
+    </ScrollView>
+</FrameLayout>
